--- a/src/app.css
+++ b/src/app.css
@@ -1,20 +1,47 @@
 @import "open-color/open-color.css";
 
+html,
 body {
     background-color: var(--oc-gray-9);
+    box-sizing: border-box;
     color: var(--oc-gray-2);
+    height: 100%;
+    margin: 0;
+}
+
+*,
+*::before,
+*::after {
+    box-sizing: inherit;
+}
+
+#app {
+    align-items: center;
+    display: flex;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+        Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    flex-direction: column;
+    height: 100%;
+    justify-content: space-between;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 500px;
+    padding: 1rem;
+    width: 100%;
 }
 
 .guesses {
     display: flex;
     flex-direction: column;
     gap: 5px;
+    width: 100%;
 }
 
 .guess {
     display: flex;
     flex-direction: row;
     gap: 5px;
+    justify-content: center;
 }
 
 @keyframes wiggle {
@@ -44,19 +71,78 @@ body {
     animation: wiggle 0.6s;
 }
 
+.header {
+    border-bottom: 2px solid rgba(var(--oc-gray-8-rgb), 0.8);
+    width: 100%;
+    text-align: center;
+}
+
+.header__title {
+    letter-spacing: 3px;
+    margin-block-end: 0.75rem;
+    margin-block-start: 0;
+}
+
+.keyboard {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    width: 100%;
+}
+
+.keyboard__row {
+    display: flex;
+    gap: 5px;
+    justify-content: center;
+    width: 100%;
+}
+
+.keyboard__letter {
+    background-color: rgba(var(--oc-gray-6-rgb), 0.8);
+    border: none;
+    border-radius: 3px;
+    color: var(--oc-gray-1);
+    flex: 0 0 10%;
+    font-family: inherit;
+    font-weight: 600;
+    height: 3.5rem;
+    max-width: calc(10% - ((5px * 9) / 10));
+    text-transform: uppercase;
+    transition: background-color 0.1s;
+    width: 100%;
+}
+
+.keyboard__letter:active {
+    background-color: rgba(var(--oc-gray-7-rgb), 0.8);
+}
+
+.keyboard__letter--used {
+    background-color: rgba(var(--oc-gray-7-rgb), 0.8);
+}
+
+.keyboard__letter--backspace,
+.keyboard__letter--enter {
+    max-width: calc(15% - ((5px * 9) / 10));
+    flex: 0 0 calc(15% - ((5px * 9) / 10));
+}
+
 .letter {
     align-items: center;
-    border: 2px solid var(--oc-gray-7);
+    aspect-ratio: 1;
+    border: 2px solid var(--oc-gray-8);
     display: flex;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-        Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    flex-basis: 0;
+    flex-grow: 1;
     font-size: 2rem;
     font-weight: 700;
-    height: 3.25rem;
     justify-content: center;
+    max-width: 4rem;
     padding: 0.25rem;
     text-transform: uppercase;
-    width: 3.25rem;
+}
+
+.letter:not(:empty) {
+    border-color: var(--oc-gray-7);
 }
 
 @keyframes bounce {
@@ -97,15 +183,15 @@ body {
 
 .letter--correct {
     background-color: rgba(var(--oc-green-8-rgb), 0.75);
-    border-color: transparent;
+    border-color: transparent !important;
 }
 
 .letter--incorrect {
     background-color: var(--oc-gray-8);
-    border-color: transparent;
+    border-color: transparent !important;
 }
 
 .letter--incorrect-location {
     background-color: rgba(var(--oc-yellow-4-rgb), 0.75);
-    border-color: transparent;
+    border-color: transparent !important;
 }
