:bug: only grey out incorrect letters on keyboard

--- a/src/app.css
+++ b/src/app.css
@@ -116,7 +116,7 @@ body {
     background-color: rgba(var(--oc-gray-7-rgb), 0.8);
 }
 
-.keyboard__letter--used {
+.keyboard__letter--incorrect {
     background-color: rgba(var(--oc-gray-7-rgb), 0.8);
 }
 
